pdf download done and like dislike without refresh done

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,9 @@
 <% if logged_in && !current_user.admin %>
-  <div class="text-right border-bottom border-secondary mb-2" %>
-    <strong><%= link_to "Create Article", new_article_path, class: "btn" %></strong>
-    <strong><%= link_to "Liked", new_article_path, class: "btn" %></strong>
-    <strong><%= link_to "Commented", new_article_path, class: "btn" %></strong>
+  <div class="text-right border-bottom border-secondary" %>
+    <strong><%= link_to "Create Article", new_article_path, class: "btn btn-outline-primary mb-2" %></strong>
+    <strong><%= link_to "Liked", new_article_path, class: "btn btn-outline-success mb-2" %></strong>
+    <strong><%= link_to "Commented", new_article_path, class: "btn btn-outline-info mb-2" %></strong>
+    <strong><%= link_to "Download_pdf", download_pdf_path(format: 'pdf'), class: "btn btn-outline-warning mb-2" %></strong>
   </div>
 <% elsif logged_in && current_user.admin %>
  <div class="text-right  border-bottom border-secondary mb-2" %>
@@ -10,97 +11,42 @@
   </div>
 <% end %>
 
-
-
-  <div class="form-group row justify-content-center">
-    <div class="col-2 my-2 pr-0">
-    <%= form_tag(articles_path, method: :get) do %> 
-        <select name="filter_option" onchange="this.form.submit()">
-          <option value="" selected>filter by category</option>
-          <% Category.all.each do |c| %>
-              <% if session[:filter_option]%>
-                <option value="<%= c.id %>" selected><%= c.name %></option>
-              <% else %>
-                <option value="<%= c.id %>"><%= c.name %></option>
-              <% end %>
-          <% end %>
-        </select>
-      <% end %>
-    </div>
-    <div class="col-10">
-      <%= form_tag(articles_path, method: :get) do %> 
-      <div class="row">
-        <div class="col-10 p-0">
-          <%= text_field_tag :search_name, params[:search_name], placeholder: "search Article by name", class: "form-control"%>
-        </div>
-        <div class="col-2 p-0">
-          <%= submit_tag "Search", class: "btn btn-primary"%>
-        </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-
+<div class="form-group row justify-content-center">
+  <%= render "articles/filter_search" %>
+</div>
 
 <% @article.each do |article| %>
-  <div class=" col-6 mx-auto border-bottom border-info mb-3">
+  <div class="card col-6 mx-auto mb-3">
     <a class="btn" href="/articles/<%= article.id %>">
       <div class="image">
         <%= image_tag article.image.url %>
       </div>
     </a>
-    <div class="card">
-      <div class="card-body">
-        <h3 class="card-title">Title: <%= article.title %></h3>
-        <h5 class="card-title">Category: <%= article.category.name %></h5>       
-        <p class="card-text">Description: <%= article.description.truncate(53) %></p>
+    <div class="card-body">
+      <div class="d-flex justify-content-between mx-2">
+        <h3 class="card-title"><em><%= article.title %></em></h3>
+        <h6 class="card-title mt-2">category: <%= article.category.name %></h6>       
       </div>
-      <% if logged_in %>
-        <% if current_user.reactions.find_by(article: article) == nil && current_user != article.user %>
-          <div class="justify-content-center row my-4">
-            <%= form_for(Reaction.new, url: reactions_path) do |f| %>
-              <%= f.hidden_field :user_id, value: current_user.id %>
-              <%= f.hidden_field :article_id, value: article.id %>
-              <%= f.hidden_field :react, value: true %>
-              <div class="col-12">
-                <strong>
-                <%=  f.submit "0 like", class: "btn btn-primary btn-block" %></strong>
-              </div>
-            <% end %> 
-            <%= form_for(Reaction.new, url: reactions_path) do |f| %>
-              <%= f.hidden_field :user_id, value: current_user.id %>
-              <%= f.hidden_field :article_id, value: article.id %>
-              <%= f.hidden_field :react, value: false %>
-              <div class="col-12">
-                <strong><%=  f.submit "0 dislike", class: "btn btn-secondary btn-block" %></strong>
-              </div>
-            <% end %>
-          </div> 
-        <% elsif current_user.reactions.find_by(article: article) != nil && current_user != article.user  %>
-          <div class="justify-content-center row my-4">
-            <%= form_for(article.reactions.where(user: current_user).first, url: like_update_reaction_path(article.reactions.where(user: current_user).first.id)) do |f| %>
-              <%= f.hidden_field :user_id, value: current_user.id %>
-              <div class="col-12">
-                <strong><%=  f.submit "#{article.reactions.where(react: true).count} like", class: "btn btn-#{ article.reactions.where(user: current_user).first.react ? "success" : "primary" } btn-block" %></strong>
-              </div>
-            <% end %> 
-            <%= form_for(article.reactions.where(user: current_user).first, url: dislike_update_reaction_path(article.reactions.where(user: current_user).first.id)) do |f| %>
-              <%= f.hidden_field :user_id, value: current_user.id %>
-              <div class="col-12">
-                <strong>
-                <%=  f.submit "#{article.reactions.where(react: false).count} dislike", class: "btn btn-#{ (article.reactions.where(user: current_user).first.react || article.reactions.where(user: current_user).first.react == nil)  ? "secondary" : "danger" } btn-block" %></strong>
-              </div>
-            <% end %>
-          </div>  
-        <% end %>
-      <% end %>
-      <% if current_user == article.user %>
-        <div class="justify-content-center row my-4">
-          <div class="col-sm-4">
-            <strong><%=  link_to "edit", edit_article_path(article), class: "btn btn-primary btn-block" %></strong>
-          </div>
+      <p class="card-text mx-2"><%= article.description.truncate(53) %></p>
+
+    <% if logged_in %>
+      <% if current_user.reactions.find_by(article: article) == nil && current_user != article.user %>
+        <div class="justify-content-center row my-4" id="like-icon-article-<%= article.id %>">
+          <%= render "articles/create", article: article %>
+        </div> 
+      <% elsif current_user.reactions.find_by(article: article) != nil && current_user != article.user  %>
+        <div id="like-icon-article-<%= article.id %>" >
+          <%= render 'articles/like', article: article %>
         </div>
-      <% end %> 
+      <% end %>
+    <% end %>
+    <% if current_user == article.user %>
+      <div class="justify-content-center row my-4">
+        <div class="col-sm-4">
+          <strong><%=  link_to "edit", edit_article_path(article), class: "btn btn-primary btn-block" %></strong>
+        </div>
+      </div>
+    <% end %> 
     </div>
   </div>
 <% end %>
